// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchContainer /> component rendering matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchContainer
    callSearch={[Function]}
    cancelSaveSearch={[Function]}
    changeSortingOrder={[Function]}
    clearSearch={[Function]}
    clearSearchFields={[Function]}
    errors={
      Object {
        "reportSuites": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "savedSearch": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "searchForm": Object {
          "errorMessage": "",
          "hasError": false,
        },
      }
    }
    fetchUserRoles={[Function]}
    getReportSuites={[Function]}
    getSavedSearch={[Function]}
    loadMore={[Function]}
    permissions={Object {}}
    populateSearchFields={[Function]}
    reportSuites={Array []}
    results={
      Object {
        "list": Array [],
        "page": 0,
        "pageSize": 20,
        "total": 0,
      }
    }
    saveSearch={[Function]}
    savedSearch={Array []}
    savedSearchFields={
      Object {
        "name": "",
      }
    }
    selectDefaultSorting={[Function]}
    selectSignals={[Function]}
    sortSearch={[Function]}
    thisSearch={
      Object {
        "descending": false,
        "includeInDashboard": false,
        "name": "",
        "sortBy": "percentageChange",
      }
    }
    toggleAdvancedSearch={[Function]}
    trackSearchResultInDashboard={[Function]}
    updateSaveSearchName={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <GridRow
          reverse={false}
        >
          <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={false}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
          valign="bottom"
        >
          <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
        >
          <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="explore"
            />
          </GridColumn>
        </GridRow>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={false}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={false}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "advanced": false,
              "customEndDate": "2018-05-01",
              "customStartDate": "2018-04-24",
              "errors": Object {
                "reportSuites": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "savedSearch": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "searchForm": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
              },
              "isCustomDateRangeEnabled": false,
              "keyValuePairs": Array [
                Object {
                  "id": 0,
                  "key": "",
                  "operator": "==",
                  "value": "",
                },
              ],
              "minEventFires": 1000,
              "name": "",
              "onAddClick": [Function],
              "onAdvancedSearchChange": [Function],
              "onClearAll": [Function],
              "onCustomEndDateChange": [Function],
              "onCustomStartDateChange": [Function],
              "onKeyChange": [Function],
              "onMinEventFiresChange": [Function],
              "onOperatorChange": [Function],
              "onRemoveClick": [Function],
              "onReportSuiteChange": [Function],
              "onReportSuiteSelect": [Function],
              "onSearch": [Function],
              "onSignalStatusChange": [Function],
              "onValueChange": [Function],
              "onViewRecordsChange": [Function],
              "reportSuites": Array [],
              "searched": false,
              "signalStatus": "ALL",
              "source": Object {
                "dataSourceIds": Array [],
                "name": "",
                "reportSuiteIds": Array [],
                "sourceType": null,
              },
              "viewRecordsFor": "7D",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>,
          "reverse": false,
          "valign": "bottom",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />,
                false,
              ],
              "className": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentSearch": "",
                  "deleteSearch": [Function],
                  "error": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "getSavedSearch": [Function],
                  "list": Array [],
                  "onSavedSearchClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="explore"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <EmptySearch
              className={undefined}
              variant="explore"
            />,
            "offsetSize": 4,
            "size": 8,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": undefined,
              "variant": "explore",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <GridRow
            reverse={false}
          >
            <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={false}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
            valign="bottom"
          >
            <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
          >
            <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="explore"
              />
            </GridColumn>
          </GridRow>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={false}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={false}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "advanced": false,
                "customEndDate": "2018-05-01",
                "customStartDate": "2018-04-24",
                "errors": Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                },
                "isCustomDateRangeEnabled": false,
                "keyValuePairs": Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ],
                "minEventFires": 1000,
                "name": "",
                "onAddClick": [Function],
                "onAdvancedSearchChange": [Function],
                "onClearAll": [Function],
                "onCustomEndDateChange": [Function],
                "onCustomStartDateChange": [Function],
                "onKeyChange": [Function],
                "onMinEventFiresChange": [Function],
                "onOperatorChange": [Function],
                "onRemoveClick": [Function],
                "onReportSuiteChange": [Function],
                "onReportSuiteSelect": [Function],
                "onSearch": [Function],
                "onSignalStatusChange": [Function],
                "onValueChange": [Function],
                "onViewRecordsChange": [Function],
                "reportSuites": Array [],
                "searched": false,
                "signalStatus": "ALL",
                "source": Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                },
                "viewRecordsFor": "7D",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>,
            "reverse": false,
            "valign": "bottom",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <SavedSearch
                    currentSearch=""
                    deleteSearch={[Function]}
                    error={
                      Object {
                        "errorMessage": "",
                        "hasError": false,
                      }
                    }
                    getSavedSearch={[Function]}
                    list={Array []}
                    onSavedSearchClick={[Function]}
                  />,
                  false,
                ],
                "className": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentSearch": "",
                    "deleteSearch": [Function],
                    "error": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "getSavedSearch": [Function],
                    "list": Array [],
                    "onSavedSearchClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="explore"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <EmptySearch
                className={undefined}
                variant="explore"
              />,
              "offsetSize": 4,
              "size": 8,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": undefined,
                "variant": "explore",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
    },
  },
}
`;

exports[`<SearchContainer /> component state changes based on events .onAddClick() adds another keyValuePair to state.keyValuePairs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchContainer
    callSearch={[Function]}
    cancelSaveSearch={[Function]}
    changeSortingOrder={[Function]}
    clearSearch={[Function]}
    clearSearchFields={[Function]}
    errors={
      Object {
        "reportSuites": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "savedSearch": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "searchForm": Object {
          "errorMessage": "",
          "hasError": false,
        },
      }
    }
    fetchUserRoles={[Function]}
    getReportSuites={[Function]}
    getSavedSearch={[Function]}
    loadMore={[Function]}
    permissions={Object {}}
    populateSearchFields={[Function]}
    reportSuites={Array []}
    results={
      Object {
        "list": Array [],
      }
    }
    saveSearch={[Function]}
    savedSearch={Array []}
    savedSearchFields={
      Object {
        "name": "",
      }
    }
    selectDefaultSorting={[Function]}
    selectSignals={[Function]}
    sortSearch={[Function]}
    thisSearch={
      Object {
        "descending": false,
        "includeInDashboard": false,
        "name": "",
        "sortBy": "percentageChange",
      }
    }
    toggleAdvancedSearch={[Function]}
    trackSearchResultInDashboard={[Function]}
    updateSaveSearchName={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <GridRow
          reverse={false}
        >
          <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
          valign="bottom"
        >
          <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
        >
          <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="noResult"
            />
          </GridColumn>
        </GridRow>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "advanced": false,
              "customEndDate": "2018-05-01",
              "customStartDate": "2018-04-24",
              "errors": Object {
                "reportSuites": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "savedSearch": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "searchForm": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
              },
              "isCustomDateRangeEnabled": false,
              "keyValuePairs": Array [
                Object {
                  "id": 0,
                  "key": "",
                  "operator": "==",
                  "value": "",
                },
              ],
              "minEventFires": 1000,
              "name": "",
              "onAddClick": [Function],
              "onAdvancedSearchChange": [Function],
              "onClearAll": [Function],
              "onCustomEndDateChange": [Function],
              "onCustomStartDateChange": [Function],
              "onKeyChange": [Function],
              "onMinEventFiresChange": [Function],
              "onOperatorChange": [Function],
              "onRemoveClick": [Function],
              "onReportSuiteChange": [Function],
              "onReportSuiteSelect": [Function],
              "onSearch": [Function],
              "onSignalStatusChange": [Function],
              "onValueChange": [Function],
              "onViewRecordsChange": [Function],
              "reportSuites": Array [],
              "searched": true,
              "signalStatus": "ALL",
              "source": Object {
                "dataSourceIds": Array [],
                "name": "",
                "reportSuiteIds": Array [],
                "sourceType": null,
              },
              "viewRecordsFor": "7D",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>,
          "reverse": false,
          "valign": "bottom",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />,
                false,
              ],
              "className": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentSearch": "",
                  "deleteSearch": [Function],
                  "error": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "getSavedSearch": [Function],
                  "list": Array [],
                  "onSavedSearchClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="noResult"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <EmptySearch
              className={undefined}
              variant="noResult"
            />,
            "offsetSize": 4,
            "size": 8,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": undefined,
              "variant": "noResult",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <GridRow
            reverse={false}
          >
            <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
            valign="bottom"
          >
            <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
          >
            <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="noResult"
              />
            </GridColumn>
          </GridRow>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "advanced": false,
                "customEndDate": "2018-05-01",
                "customStartDate": "2018-04-24",
                "errors": Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                },
                "isCustomDateRangeEnabled": false,
                "keyValuePairs": Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ],
                "minEventFires": 1000,
                "name": "",
                "onAddClick": [Function],
                "onAdvancedSearchChange": [Function],
                "onClearAll": [Function],
                "onCustomEndDateChange": [Function],
                "onCustomStartDateChange": [Function],
                "onKeyChange": [Function],
                "onMinEventFiresChange": [Function],
                "onOperatorChange": [Function],
                "onRemoveClick": [Function],
                "onReportSuiteChange": [Function],
                "onReportSuiteSelect": [Function],
                "onSearch": [Function],
                "onSignalStatusChange": [Function],
                "onValueChange": [Function],
                "onViewRecordsChange": [Function],
                "reportSuites": Array [],
                "searched": true,
                "signalStatus": "ALL",
                "source": Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                },
                "viewRecordsFor": "7D",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>,
            "reverse": false,
            "valign": "bottom",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <SavedSearch
                    currentSearch=""
                    deleteSearch={[Function]}
                    error={
                      Object {
                        "errorMessage": "",
                        "hasError": false,
                      }
                    }
                    getSavedSearch={[Function]}
                    list={Array []}
                    onSavedSearchClick={[Function]}
                  />,
                  false,
                ],
                "className": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentSearch": "",
                    "deleteSearch": [Function],
                    "error": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "getSavedSearch": [Function],
                    "list": Array [],
                    "onSavedSearchClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="noResult"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <EmptySearch
                className={undefined}
                variant="noResult"
              />,
              "offsetSize": 4,
              "size": 8,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": undefined,
                "variant": "noResult",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
    },
  },
}
`;

exports[`<SearchContainer /> component state changes based on events .onRemoveClick() adds another keyValuePair to state.keyValuePairs 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchContainer
    callSearch={[Function]}
    cancelSaveSearch={[Function]}
    changeSortingOrder={[Function]}
    clearSearch={[Function]}
    clearSearchFields={[Function]}
    errors={
      Object {
        "reportSuites": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "savedSearch": Object {
          "errorMessage": "",
          "hasError": false,
        },
        "searchForm": Object {
          "errorMessage": "",
          "hasError": false,
        },
      }
    }
    fetchUserRoles={[Function]}
    getReportSuites={[Function]}
    getSavedSearch={[Function]}
    loadMore={[Function]}
    permissions={Object {}}
    populateSearchFields={[Function]}
    reportSuites={Array []}
    results={
      Object {
        "list": Array [],
      }
    }
    saveSearch={[Function]}
    savedSearch={Array []}
    savedSearchFields={
      Object {
        "name": "",
      }
    }
    selectDefaultSorting={[Function]}
    selectSignals={[Function]}
    sortSearch={[Function]}
    thisSearch={
      Object {
        "descending": false,
        "includeInDashboard": false,
        "name": "",
        "sortBy": "percentageChange",
      }
    }
    toggleAdvancedSearch={[Function]}
    trackSearchResultInDashboard={[Function]}
    updateSaveSearchName={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <GridRow
          reverse={false}
        >
          <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
          valign="bottom"
        >
          <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>
        </GridRow>,
        <GridRow
          reverse={false}
        >
          <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="noResult"
            />
          </GridColumn>
        </GridRow>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Search
              advanced={false}
              customEndDate="2018-05-01"
              customStartDate="2018-04-24"
              errors={
                Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                }
              }
              isCustomDateRangeEnabled={false}
              keyValuePairs={
                Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ]
              }
              minEventFires={1000}
              name=""
              onAddClick={[Function]}
              onAdvancedSearchChange={[Function]}
              onClearAll={[Function]}
              onCustomEndDateChange={[Function]}
              onCustomStartDateChange={[Function]}
              onKeyChange={[Function]}
              onMinEventFiresChange={[Function]}
              onOperatorChange={[Function]}
              onRemoveClick={[Function]}
              onReportSuiteChange={[Function]}
              onReportSuiteSelect={[Function]}
              onSearch={[Function]}
              onSignalStatusChange={[Function]}
              onValueChange={[Function]}
              onViewRecordsChange={[Function]}
              reportSuites={Array []}
              searched={true}
              signalStatus="ALL"
              source={
                Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                }
              }
              viewRecordsFor="7D"
            />,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "advanced": false,
              "customEndDate": "2018-05-01",
              "customStartDate": "2018-04-24",
              "errors": Object {
                "reportSuites": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "savedSearch": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
                "searchForm": Object {
                  "errorMessage": "",
                  "hasError": false,
                },
              },
              "isCustomDateRangeEnabled": false,
              "keyValuePairs": Array [
                Object {
                  "id": 0,
                  "key": "",
                  "operator": "==",
                  "value": "",
                },
              ],
              "minEventFires": 1000,
              "name": "",
              "onAddClick": [Function],
              "onAdvancedSearchChange": [Function],
              "onClearAll": [Function],
              "onCustomEndDateChange": [Function],
              "onCustomStartDateChange": [Function],
              "onKeyChange": [Function],
              "onMinEventFiresChange": [Function],
              "onOperatorChange": [Function],
              "onRemoveClick": [Function],
              "onReportSuiteChange": [Function],
              "onReportSuiteSelect": [Function],
              "onSearch": [Function],
              "onSignalStatusChange": [Function],
              "onValueChange": [Function],
              "onViewRecordsChange": [Function],
              "reportSuites": Array [],
              "searched": true,
              "signalStatus": "ALL",
              "source": Object {
                "dataSourceIds": Array [],
                "name": "",
                "reportSuiteIds": Array [],
                "sourceType": null,
              },
              "viewRecordsFor": "7D",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            size={12}
          >
            <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>
          </GridColumn>,
          "reverse": false,
          "valign": "bottom",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <div
              className={undefined}
            >
              <SavedSearch
                currentSearch=""
                deleteSearch={[Function]}
                error={
                  Object {
                    "errorMessage": "",
                    "hasError": false,
                  }
                }
                getSavedSearch={[Function]}
                list={Array []}
                onSavedSearchClick={[Function]}
              />
            </div>,
            "size": 12,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />,
                false,
              ],
              "className": undefined,
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "currentSearch": "",
                  "deleteSearch": [Function],
                  "error": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "getSavedSearch": [Function],
                  "list": Array [],
                  "onSavedSearchClick": [Function],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              false,
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <GridColumn
            offsetSize={4}
            size={8}
          >
            <EmptySearch
              className={undefined}
              variant="noResult"
            />
          </GridColumn>,
          "reverse": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <EmptySearch
              className={undefined}
              variant="noResult"
            />,
            "offsetSize": 4,
            "size": 8,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": undefined,
              "variant": "noResult",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <GridRow
            reverse={false}
          >
            <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
            valign="bottom"
          >
            <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>
          </GridRow>,
          <GridRow
            reverse={false}
          >
            <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="noResult"
              />
            </GridColumn>
          </GridRow>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Search
                advanced={false}
                customEndDate="2018-05-01"
                customStartDate="2018-04-24"
                errors={
                  Object {
                    "reportSuites": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "savedSearch": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "searchForm": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                  }
                }
                isCustomDateRangeEnabled={false}
                keyValuePairs={
                  Array [
                    Object {
                      "id": 0,
                      "key": "",
                      "operator": "==",
                      "value": "",
                    },
                  ]
                }
                minEventFires={1000}
                name=""
                onAddClick={[Function]}
                onAdvancedSearchChange={[Function]}
                onClearAll={[Function]}
                onCustomEndDateChange={[Function]}
                onCustomStartDateChange={[Function]}
                onKeyChange={[Function]}
                onMinEventFiresChange={[Function]}
                onOperatorChange={[Function]}
                onRemoveClick={[Function]}
                onReportSuiteChange={[Function]}
                onReportSuiteSelect={[Function]}
                onSearch={[Function]}
                onSignalStatusChange={[Function]}
                onValueChange={[Function]}
                onViewRecordsChange={[Function]}
                reportSuites={Array []}
                searched={true}
                signalStatus="ALL"
                source={
                  Object {
                    "dataSourceIds": Array [],
                    "name": "",
                    "reportSuiteIds": Array [],
                    "sourceType": null,
                  }
                }
                viewRecordsFor="7D"
              />,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "advanced": false,
                "customEndDate": "2018-05-01",
                "customStartDate": "2018-04-24",
                "errors": Object {
                  "reportSuites": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "savedSearch": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                  "searchForm": Object {
                    "errorMessage": "",
                    "hasError": false,
                  },
                },
                "isCustomDateRangeEnabled": false,
                "keyValuePairs": Array [
                  Object {
                    "id": 0,
                    "key": "",
                    "operator": "==",
                    "value": "",
                  },
                ],
                "minEventFires": 1000,
                "name": "",
                "onAddClick": [Function],
                "onAdvancedSearchChange": [Function],
                "onClearAll": [Function],
                "onCustomEndDateChange": [Function],
                "onCustomStartDateChange": [Function],
                "onKeyChange": [Function],
                "onMinEventFiresChange": [Function],
                "onOperatorChange": [Function],
                "onRemoveClick": [Function],
                "onReportSuiteChange": [Function],
                "onReportSuiteSelect": [Function],
                "onSearch": [Function],
                "onSignalStatusChange": [Function],
                "onValueChange": [Function],
                "onViewRecordsChange": [Function],
                "reportSuites": Array [],
                "searched": true,
                "signalStatus": "ALL",
                "source": Object {
                  "dataSourceIds": Array [],
                  "name": "",
                  "reportSuiteIds": Array [],
                  "sourceType": null,
                },
                "viewRecordsFor": "7D",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              size={12}
            >
              <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>
            </GridColumn>,
            "reverse": false,
            "valign": "bottom",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className={undefined}
              >
                <SavedSearch
                  currentSearch=""
                  deleteSearch={[Function]}
                  error={
                    Object {
                      "errorMessage": "",
                      "hasError": false,
                    }
                  }
                  getSavedSearch={[Function]}
                  list={Array []}
                  onSavedSearchClick={[Function]}
                />
              </div>,
              "size": 12,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <SavedSearch
                    currentSearch=""
                    deleteSearch={[Function]}
                    error={
                      Object {
                        "errorMessage": "",
                        "hasError": false,
                      }
                    }
                    getSavedSearch={[Function]}
                    list={Array []}
                    onSavedSearchClick={[Function]}
                  />,
                  false,
                ],
                "className": undefined,
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "currentSearch": "",
                    "deleteSearch": [Function],
                    "error": Object {
                      "errorMessage": "",
                      "hasError": false,
                    },
                    "getSavedSearch": [Function],
                    "list": Array [],
                    "onSavedSearchClick": [Function],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                false,
              ],
              "type": "div",
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <GridColumn
              offsetSize={4}
              size={8}
            >
              <EmptySearch
                className={undefined}
                variant="noResult"
              />
            </GridColumn>,
            "reverse": false,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <EmptySearch
                className={undefined}
                variant="noResult"
              />,
              "offsetSize": 4,
              "size": 8,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": undefined,
                "variant": "noResult",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "context": Object {
      "store": Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
    },
  },
}
`;
